[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/img_crate.png" type="Texture" id=1]
[ext_resource path="res://bodyCrate.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/img_direction.png" type="Texture" id=3]
[ext_resource path="res://Assets/Resources/res_direction.tres" type="Shape2D" id=4]
[ext_resource path="res://Assets/Sounds/snd_crate.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.9, 15.9 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="bodyCrate" type="KinematicBody2D" groups=[
"movable",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Directions" type="Node2D" parent="."]

[node name="areaU" type="TouchScreenButton" parent="Directions"]
position = Vector2( -16, -48 )
normal = ExtResource( 3 )
shape = ExtResource( 4 )

[node name="areaR" type="TouchScreenButton" parent="Directions"]
position = Vector2( 48, -16 )
rotation = 1.5708
normal = ExtResource( 3 )
shape = ExtResource( 4 )

[node name="areaD" type="TouchScreenButton" parent="Directions"]
position = Vector2( 16, 48 )
rotation = 3.14159
normal = ExtResource( 3 )
shape = ExtResource( 4 )

[node name="areaL" type="TouchScreenButton" parent="Directions"]
position = Vector2( -48, 16 )
rotation = 4.71239
normal = ExtResource( 3 )
shape = ExtResource( 4 )

[node name="audioMove" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
process_material = SubResource( 2 )
[connection signal="pressed" from="Directions/areaU" to="." method="_on_areaU_pressed"]
[connection signal="pressed" from="Directions/areaR" to="." method="_on_areaR_pressed"]
[connection signal="pressed" from="Directions/areaD" to="." method="_on_areaD_pressed"]
[connection signal="pressed" from="Directions/areaL" to="." method="_on_areaL_pressed"]
